<resources>
    <string name="homepage_xlist_footertext">正在加载更多内容</string>
    <string name="homepage_xlist_footertext_no_more">没有更多数据了哦</string>
    <string name="app_name">食安购</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_timeout">请求超时</string>
    <string name="error_server">服务器错误</string>
    <string name="error_internet">网络错误</string>
    <string name="main_tabs_home">首页</string>
    <string name="main_tabs_category">分类</string>
    <string name="main_tabs_point"></string>
    <string name="main_tabs_cart">购物车</string>
    <string name="main_tabs_user">我</string>
    <string name="common_confirm">确认</string>
    <string name="common_confirm_pay">确认支付</string>
    <string name="common_cancel">取消</string>
    <string name="common_finish">完成</string>
    <string name="common_camera">拍照</string>
    <string name="common_manage">管理</string>
    <string name="common_submit">提交</string>
    <string name="common_addimg">添加图片</string>
    <string name="common_picked">从相册选择</string>
    <string name="common_msg">我的消息</string>
    <string name="common_save">保存</string>
    <string name="common_success_tip">成功</string>
    <string name="common_fail_tip">失败</string>
    <string name="common_user_center">我的帐户</string>
    <string name="common_search">搜索</string>
    <string name="common_updata">更新</string>
    <string name="common_pay_success">支付成功</string>
    <string name="common_pay_fail">支付失败</string>
    <string name="common_smart_orderby">智能排序</string>
    <string name="common_share">分享</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_wechat">微信</string>
    <string name="share_moments">朋友圈</string>
    <string name="share_sina">新浪</string>
    <string name="share_email">邮箱</string>
    <string name="share_msg">短信</string>
    <string name="share_link">复制链接</string>
    <string name="upgrade_cancel">取消</string>
    <string name="upgrade_update">升级</string>
    <string name="upgrade_update_title">发现新版本</string>
    <string name="upgrade_update_newest">当前已是最新版本</string>
    <string name="upgrade_download_ticker">正在下载新版本</string>
    <string name="upgrade_download_title">版本更新中</string>
    <string name="upgrade_download_progress">已经下载:%1$s%%</string>
    <string name="upgrade_download_failure">安装包下载失败</string>
    <string name="upgrade_update_tips">正在检查更新，请稍候...</string>
    <string name="upgrade_update_failure">检查更新失败，请重试！</string>
    <string name="splash_slogan_text">©2017 ShiAnGou (China) Softwareco.Ltd</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="common_tip_changename">注意: 与食安购业务或品牌冲突的名称，将有权收回</string>
    <string name="common_tip_anonymous">你的评论会以匿名的方式展现</string>
    <string name="title_register_title">注册</string>
    <string name="title_register_success">注册成功</string>
    <string name="title_login_title">登录</string>
    <string name="title_logout_title">退出登录</string>
    <string name="title_login_nouser">没有账号？</string>
    <string name="title_login_fogavepwd">忘记密码？</string>
    <string name="title_login_registernow">立即注册</string>
    <string name="title_register_code">获取验证码</string>
    <string name="title_register_phone_hint">请输入您的手机号</string>
    <string name="title_register_name_hint">请输入您的用户名</string>
    <string name="title_register_code_hint">请输入您的验证码</string>
    <string name="title_register_pwd_hint">请设定您的密码（限6-16个字母、数字，区分大小写）</string>
    <string name="title_register_pwdag_hint">请再次输入您的密码</string>
    <string name="title_register_pwdold_hint">请输入您的原密码</string>
    <string name="title_register_phone_tip">请输入正确的手机号</string>
    <string name="title_register_code_time">%s秒后可重发</string>
    <string name="register_to_get_securitycode">重新获取</string>
    <string name="error_login_needlog">您的账号已经在其它设备登录，请您重新登录！</string>
    <string name="setup_title_text">设置</string>
    <string name="setup_setname_text">点击设置昵称</string>
    <string name="setup_address_text">我的收货地址</string>
    <string name="setup_changepwd_text">修改密码</string>
    <string name="setup_forgetpwd_text">忘记密码</string>
    <string name="str_home_search_tip">请输入商品名称</string>
    <string name="str_home_category_title">食安购市场</string>
    <string name="confirmorder_title_text">确认订单</string>
    <string name="confirmorder_receipt_text">收货信息</string>
    <string name="confirmorder_receiptmsg_text">请填写收货信息</string>
    <string name="confirmorder_goodscount_text">共%d件商品</string>
    <string name="confirmorder_remark_text">留言/备注</string>
    <string name="confirmorder_goodstotal_text">小计：¥</string>
    <string name="confirmorder_freighttotal_text">运费合计：¥ %1$f%2$s</string>
    <string name="confirmorder_total_text">应付款：¥</string>
    <string name="confirmorder_name">姓名: %s</string>
    <string name="confirmorder_addre">地址: %s</string>
    <string name="confirmorder_phone">电话: %s</string>
    <string name="confirmorder_num">x%s</string>
    <string name="confirmorder_order_fail">生成订单失败，请重新确认</string>
    <string name="confirmorder_order_success">订单成功</string>
    <string name="order_unline_consume">消费:%s元</string>
    <string name="order_unline_actualMoney">实付:</string>
    <string name="order_unline_title">消费记录</string>
    <string name="prodetail_act_title">商品详情</string>
    <string name="prodetail_img_title">图文详情</string>
    <string name="prodetail_discount">折扣</string>
    <string name="prodetail_full">满减</string>
    <string name="prodetail_buy_service">客服</string>
    <string name="prodetail_buy_cart">购物车</string>
    <string name="prodetail_buy_addcart">加入购物车</string>
    <string name="prodetail_buy_buy">立即购买</string>
    <string name="prodetail_sku_select_tip">请选择</string>
    <string name="prodetail_sku_select_amount">超出数据范围</string>
    <string name="prodetail_buy_cellection">收藏</string>
    <string name="prodetail_buy_cellectioned">已收藏</string>
    <string name="prodetail_buy_soldout">商品已售完</string>
    <string name="prodetail_buy_instoke">商品已下架</string>
    <string name="prodetail_collection_save_success">收藏成功</string>
    <string name="prodetail_collection_cancel_success">取消收藏成功</string>
    <string name="prodetail_collection_cancel">取消收藏</string>
    <string name="prodetail_more_remark">查看更多评价</string>
    <string name="prodetail_sale_num">已售:%s</string>
    <string name="prodetail_title_refunds">退货/退款</string>
    <string name="prodetail_refunds">退款</string>
    <string name="prodetail_title_refundsdetail">退货详情</string>
    <string name="prodetail_refunds_money">退款金额: ¥</string>
    <string name="prodetail_refunds_moneytip">退款金额</string>
    <string name="prodetail_refunds_tip">退款说明</string>
    <string name="prodetail_refunds_code_format">退款编号:%s</string>
    <string name="prodetail_refunds_explain_format">退款原因:%s</string>
    <string name="prodetail_refunds_date_format">申请时间:%s</string>
    <string name="prodetail_refunds_tip_hint">请填写退款说明</string>
    <string name="prodetail_refunds_detail">查看详情</string>
    <string name="prodetail_refunds_progressbegin">申请退货</string>
    <string name="prodetail_refunds_progressing">退货中</string>
    <string name="prodetail_refunds_progressuccess">退货成功</string>
    <string name="prodetail_error_getdesc">获取失败请重试</string>
    <string name="address_default_text">[默认地址]</string>
    <string name="address_titleslct_text">选择收货地址</string>
    <string name="address_titlemng_text">管理收货地址</string>
    <string name="address_addaddress_text">新增地址</string>
    <string name="address_addressperson_title">收货人:</string>
    <string name="address_addressperson_text">收货人:%s</string>
    <string name="address_addressperson_addr">收货地址:%s</string>
    <string name="address_addressphone_text">联系方式:</string>
    <string name="address_address_text">所在地区:</string>
    <string name="address_addressmsg_text">详细地址:</string>
    <string name="address_addressmsg_hint_text">街道/楼栋号/门牌号</string>
    <string name="address_addresschange_title_text">收货信息</string>
    <string name="address_addresschange_confirm_text">保存并作用</string>
    <string name="address_setdefault_text">设为默认地址</string>
    <string name="address_tip_consignee">请完善收货信息</string>
    <string name="common_cart_title">购物车</string>
    <string name="common_cart_edit">编辑</string>
    <string name="common_cart_del">删除</string>
    <string name="common_cart_editover">完成</string>
    <string name="common_cart_all">全选</string>
    <string name="common_cart_total_pay">合计:</string>
    <string name="common_cart_total">总额:</string>
    <string name="common_cart_fullcut">满减:</string>
    <string name="common_cart_tobuy">去结算</string>
    <string name="common_cart_add_success">加入购物车成功</string>
    <string name="common_cart_add_faild">加入购物车失败</string>
    <string name="common_cart_noselect">请选择商品</string>
    <string name="common_cart_delet_title">确定删除选中商品么?</string>
    <string name="common_cart_status_instock">商品已下架</string>
    <string name="common_card_status_soldout">商品已售完</string>
    <string name="common_card_status_shortage">库存不足</string>
    <string name="common_card_empty">购物车还是空的哦</string>
    <string name="common_user_order_title">我的订单</string>
    <string name="common_user_order_title_tips">查看全部</string>
    <string name="common_user_order_unpay">待付款</string>
    <string name="common_user_order_unsend">待发货</string>
    <string name="common_user_order_wait">待收货</string>
    <string name="common_user_order_all">全部</string>
    <string name="common_user_order_unremark">待评价</string>
    <string name="common_user_order_return">退货/退款</string>
    <string name="common_user_item_like">我喜欢的</string>
    <string name="common_user_item_contactus">联系我们</string>
    <string name="common_user_item_help">使用帮助</string>
    <string name="common_user_header">头像</string>
    <string name="common_user_nickname">昵称</string>
    <string name="common_user_nickname_change">点击编辑昵称</string>
    <string name="common_user_addressmng">地址管理</string>
    <string name="about_title">关于我们</string>
    <string name="about_link">联系我们</string>
    <string name="about_phone">010-58527646</string>
    <string name="order_bt_cancel">取消订单</string>
    <string name="order_bt_tipsend">提醒发货</string>
    <string name="order_bt_pay">去支付</string>
    <string name="order_bt_remark">评论</string>
    <string name="order_bt_refunds">申请退货</string>
    <string name="order_bt_confirm">确认收货</string>
    <string name="order_bt_del">删除订单</string>
    <string name="order_title_logistics">物流信息</string>
    <string name="order_item_count">共%d件商品 合计: ¥</string>
    <string name="order_status_unpay">物流信息</string>
    <string name="common_point_str">积分</string>
    <string name="common_pointtitle_str">积分商城</string>
    <string name="point_record_str">兑换记录</string>
    <string name="point_zero_str">0元换购</string>
    <string name="point_today_str">今日新品</string>
    <string name="point_common_str">日常家居</string>
    <string name="point_all_str">所有商品</string>
    <string name="point_alluser_str">大家都在兑</string>
    <string name="point_submit_success">您的兑换申请成功提交，工作人员将尽快为您\n处理，请耐心等待</string>
    <string name="point_submit_desc">在我的订单界面中可查看订单状态</string>
    <string name="point_submit_result_bt_gorecord">前往兑换记录</string>
    <string name="point_submit_result_bt_buy">继续逛逛</string>
    <string name="unline_maybe_like">猜你喜欢</string>
    <string name="unline_food">美食</string>
    <string name="unline_play">休闲娱乐</string>
    <string name="unline_live">生活服务</string>
    <string name="unline_pay_pointnum">当前还剩%s积分</string>
    <string name="unline_pay_total_tip">询问服务员后输入金额</string>
    <string name="unline_pay_total">消费总额:</string>
    <string name="unline_pay_title">马上结算</string>
    <string name="unline_pay_lack">提示: 扣除积分后还差%s元，请点击支付选择支付方式</string>
</resources>